--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Expires" content="0" />
     <!-- <title>东方微投研</title> -->
-    <title>2017年度盘点</title>
+    <title>微投研</title>
     <!-- antm-viewport.min.js -->
     <script type="text/javascript" src="%PUBLIC_URL%/antm-viewport.min.js"></script>
     <!-- fastclick.min.js -->
